# dev-server

./: Cargo.toml  README.md
index/: index.html  serverconfig.toml
index/static/: index.js
src/: config.rs  main.rs
