[package]
name = "dev_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-toolbox = { version = "0.11.0", features = ["ws"] }
actix-web = "4.3.1"
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.18"
notify = "6.0.0"
notify-debouncer-full = "0.1.0"
serde = {version = "~1", features= ["derive"]  }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
